Inmob-Salesforce/force-app/main/default/objects/agf__ADM_Parent_Cloud__c/agf__ADM_Parent_Cloud__c.object-meta.xml
<CustomObject>
    <label>Parent Cloud</label>
    <nameField>
        <label>Parent Cloud Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parent Clouds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>