Inmob-Salesforce/force-app/main/default/objects/agf__ADM_Parent_Cloud__c/fields/agf__Alternate_Roster_Owner__c.field-meta.xml
<CustomField>
    <fullName>agf__Alternate_Roster_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Roster Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parent_Clouds_Alternate</relationshipName>
    <type>Lookup</type>
</CustomField>