Inmob-Salesforce/force-app/main/default/objects/agf__ADM_Parent_Cloud__c/fields/agf__Parent_Cloud_Type__c.field-meta.xml
<CustomField>
    <fullName>agf__Parent_Cloud_Type__c</fullName>
    <label>Parent Cloud Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>