Inmob-Salesforce/force-app/main/default/objects/agf__ADM_Parent_Cloud__c/fields/agf__Senior_Engineering_Leader__c.field-meta.xml
<CustomField>
    <fullName>agf__Senior_Engineering_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is Srini&apos;s direct report that the cloud rolls up to</inlineHelpText>
    <label>Senior Engineering Leader</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Parent_Clouds_Senior_Engineering_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>